# 3D-ROMAP

./: 3D-ROMAP.sh  README.md  romap_launch.sh
3D-ROMAP.wiki/: 3D-Robotic-Mapping-Platform.md
CECS490A/: README.md
Docs/: 3D-ROMAP-DM.odt  README.md
Docs/BOM/: README.md
Docs/ICD/: 3D-SLAM-ROVER-ICD.docx  3D-SLAM-ROVER-ICD.odt  README.md
Docs/IDD/: IDD-3D-ROMAP.odt  README.md
Docs/PDR/: Preliminary_Concept.odp  README.md
Electrical/Power Supply/: 3D-ROMAP-PSU-BOM.csv
Engineering/Datasheets/: README.md
Engineering/EE/: Power Supply.ods  Power_Supply.ods  README.md
Engineering/ME/: README.md
Engineering/Software/: README.md
Engineering/Systems/: README.md
Mechanical/: 3D-ROMAP-PSU.step
Mechanical/Chassis Components/: Chassis Face Base.stl  Chassis Face Right.stl
Mechanical/Motor Assembly/: Slip Joint Gear v2.f3d
Mechanical/Motor Assembly v2/: Lidar Assembly v2.f3d
Mechanical/Movement Motor Mounts/: Movement Motor Back Mount.stl  Movement Motor Mount.stl
Mechanical/Physical Components/: ARM.stl  Battery1.stl  Battery2.stl  Jetson.stl  MMount1.stl  MMount2.stl  Motor1.stl  Motor2.stl  PowerSupply.stl  RPLidar.stl  RealSense.stl  Router.stl  Wheel1.stl  Wheel2.stl
Software/PCL-Mapping/Initial-Alignment/: CMakeLists.txt  feature_alignment.cpp  object_template_0.pcd  object_template_1.pcd  object_template_2.pcd  object_template_3.pcd  object_template_4.pcd  object_template_5.pcd  object_templates.txt
Software/PCL-Realsense-Capture/RS_Testing/: CMakeLists.txt  Captured_Frame.ply  RS-Frame_Capture.cpp
Systems/: Interfaces.ods
(+162 files in other folders)
